# bazel-opa-bug-reproduce

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum
bzlmod/: BUILD.bazel  main.go  opa.go
